--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,11 +1,29 @@
+// fonts
+$font-family: 'GothamBold', Arial, Helvetica, sans-serif;
+
+$font-gotham: 'GothamBook', Arial, Helvetica, sans-serif;
+$font-gotham-bold: 'GothamBold', Arial, Helvetica, sans-serif;
+$font-gotham-medium: 'GothamMedium', Arial, Helvetica, sans-serif;
+$font-icon-elegant: 'ElegantIcons';
+
 // colors
-$font-color--dark: #333;
-$font-color--light: #fff;
-$background--light: #eee;
-$background--dark: #222;
+$font-color--dark: #6366D7;
+$font-color--light: #FFFEFF;
+
+$background--light: #F2F2F2;
+$background--dark: #6166DB;
+
+$primary-color: #4ce4bb;
+
+$button-color: #4ce4bb;
+$links-color: #6e6e6e;
+
 $blue: #1f8de2;
 $green: #1fe27b;
 $red: #e21f3f;
+
+// grid
+$grid-size: 1170px;
 
 // spacing
 $full-space: 40px;
