--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,9 +1,10 @@
 @import 'vars';
+@import 'fonts.scss';
 @import 'typography';
+@import 'button';
 
-body {
-  font-family: Helvetica, sans-serif;
-  color: $font-color--dark;
-  background-color: $background--light;
-  padding: $half-space;
-}
+@import 'global';
+@import 'header';
+@import 'section-top';
+@import 'section-middle';
+@import 'footer';
